--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
+    "excon": "^1.0.2",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "massive": "^4.7.1",
