--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "massive": "^4.7.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
