--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2"
   },
   "scripts": {
