--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "massive": "^4.7.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "yelp-fusion": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
