--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-swipe": "^5.1.1",
     "redux": "^3.7.2",
+    "swipe-js-iso": "^2.0.4",
     "yelp-fusion": "^2.0.3"
   },
   "scripts": {
