--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-swipe": "^5.1.1",
+    "react-swipeable-views": "^0.12.13",
     "redux": "^3.7.2",
     "swipe-js-iso": "^2.0.4",
     "yelp-fusion": "^2.0.3"
